--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 ---
 layout: home
 author_profile: true
+header:
+  #overlay_color: "#5e616c"
+  overlay_image: /images/homebanner.jpg
+  caption: "Photo credit: [**Ev Ko**](https://unsplash.com/@evgenyko)"
+  #cta_label: "<i class='fa fa-download'></i> Install Now"
+  #cta_url: "/docs/quick-start-guide/"
+  #caption:
 ---
 
