--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 header:
   #overlay_color: "#5e616c"
   overlay_image: /images/homebanner.jpg
-  caption: "Photo credit: [**Ev Ko**](https://unsplash.com/@evgenyko)"
+  caption: "Photo credit: [**Bhavesh Patel**](https://unsplash.com/@bpatelnz)"
   #cta_label: "<i class='fa fa-download'></i> Install Now"
   #cta_url: "/docs/quick-start-guide/"
   #caption:
